--- a/static/intro.css
+++ b/static/intro.css
@@ -427,3 +427,33 @@ li a:hover {
   color:#d83c3c;
   text-decoration:none;
 }
+
+.add-box {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px; /* Atur lebar sesuai kebutuhan */
+  margin: 0 auto; /* Menengahkan form */
+}
+
+.form-group {
+  margin-bottom: 10px;
+}
+
+.form-group label {
+  margin-bottom: 5px;
+}
+
+.form-control {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%; /* Agar input box memenuhi lebar parent */
+}
+
+button {
+  margin-top: 10px;
+  padding: 8px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
