--- a/templates/portofolio.html
+++ b/templates/portofolio.html
@@ -28,7 +28,9 @@
                 <li><a href="{{ url_for('home') }}" class="active">Home</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
                 <li><a href="{{ url_for('portofolio') }}">Portofolio</a></li>
-                <li><a href="{{ url_for('result') }}">Databases</a></li>
+                <li><a href="{{ url_for('add') }}">Add Data</a></li>
+                <li><a href="{{ url_for('delete') }}">Delete Data</a></li>
+                <li><a href="{{ url_for('result') }}">Data Result</a></li>
             </ul>
             <label class="mode">
                 <input type="checkbox" id="darkModeToggle">
