--- a/templates/result.html
+++ b/templates/result.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="{{ url_for('static', filename='intro.css') }}">
-    <title>DATABASE</title>
+    <title>RESULT</title>
 </head>
 
 <body>
@@ -29,7 +29,9 @@
                 <li><a href="{{ url_for('home') }}" class="active">Home</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
                 <li><a href="{{ url_for('portofolio') }}">Portofolio</a></li>
-                <li><a href="{{ url_for('result') }}">Databases</a></li>
+                <li><a href="{{ url_for('add') }}">Add Data</a></li>
+                <li><a href="{{ url_for('delete') }}">Delete Data</a></li>
+                <li><a href="{{ url_for('result') }}">Data Result</a></li>
             </ul>
             <label class="mode">
                 <input type="checkbox" id="darkModeToggle">
@@ -39,7 +41,10 @@
     </header>
 
         <div class="table-responsive" >
-<table class="table" style="width: 50%; margin-left: 25%;text-align: center;border:solid; border-color:black; margin-top: 10%;">
+            <div style="padding-top: 5%;text-align: center;">
+  <h1 class="display-4">DATA RESULT</h1>
+  <center><hr style="color: #f9532d; background-color: #f9532d; height: 4px; border: none; width: 50%; margin-top: 50px; margin-bottom: 50px;"></center>
+<table class="table" style="width: 50%; margin-left: 25%;text-align: center;border:solid; border-color:black; margin-top: 3%;">
   <thead style="background-color: #000000;">
     <tr style="color: white;">
       <th scope="col">NAMA</th>
