--- a/templates/about.html
+++ b/templates/about.html
@@ -29,6 +29,7 @@
                 <li><a href="{{ url_for('about') }}">About</a></li>
                 <li><a href="{{ url_for('portofolio') }}">Portofolio</a></li>
                 <li><a href="{{ url_for('add') }}">Add Data</a></li>
+                <li><a href="{{ url_for('update') }}">Update Data</a></li>
                 <li><a href="{{ url_for('delete') }}">Delete Data</a></li>
                 <li><a href="{{ url_for('result') }}">Data Result</a></li>
             </ul>
