--- a/templates/update.html
+++ b/templates/update.html
@@ -44,7 +44,7 @@
 
         <!--form-->
 <div style="padding-top: 5%;text-align: center;">
-  <h1 class="display-4">HAPUS DATA</h1>
+  <h1 class="display-4">UPDATE DATA</h1>
   <center><hr style="color: #f9532d; background-color: #f9532d; height: 4px; border: none; width: 50%; margin-top: 50px; margin-bottom: 50px;"></center>
 </div>
 <div class="add-box">
@@ -52,16 +52,20 @@
         <div class="form-group">
             <label>Nim</label>
             <input type="text" name="nim" class="form-control" placeholder="Masukkan Nim mahasiswa">
-        
+        </div>
+        <div class="form-group">
         <label>New Nim</label>
             <input type="text" name="new_nim" class="form-control" placeholder="Masukkan Nim Baru">
-        
+            </div>
+        <div class="form-group">
         <label>New Name</label>
             <input type="text" name="new_name" class="form-control" placeholder="Masukkan Nama Baru">
-        
+        </div>
+        <div class="form-group">
         <label>New Kelas</label>
             <input type="text" name="new_kelas" class="form-control" placeholder="Masukkan Kelas Baru">
-        
+        </div>
+        <div class="form-group">
         <label>New Prodi</label>
             <input type="text" name="new_prodi" class="form-control" placeholder="Masukkan Prodi Baru">
         </div>
