--- a/templates/result.html
+++ b/templates/result.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="{{ url_for('static', filename='intro.css') }}">
-    <title>RESULT</title>
+    <title>RESULT DATA</title>
 </head>
 
 <body>
